--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "babel-jest": "^29.7.0",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
