finish setting up eslint

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint && eslint . && stylelint .",
     "prepare": "husky",
     "test": "jest",
     "test:ci": "jest --ci --reporters=default --reporters=github-actions",
@@ -45,6 +45,7 @@
     "eslint": "^9.24.0",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
