--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/experimental-nextjs-vite": "^8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
+    "@tailwindcss/postcss": "^4.1.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -67,6 +68,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
     "playwright": "^1.51.1",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "storybook": "^8.6.12",
     "stylelint": "^16.18.0",
