--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.5.1",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
