--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
