--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
