--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.17"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
