--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@clerk/nextjs": "^6.14.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "mongoose": "^8.13.2",
     "next": "15.2.4",
