--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.2",
+    "@prisma/client": "6.6.0",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -78,6 +79,7 @@
     "playwright": "^1.51.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "prisma": "6.6.0",
     "storybook": "^8.6.12",
     "stylelint": "^16.18.0",
     "stylelint-config-standard": "^38.0.0",
