--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.17"
+    "react-hook-form": "^7.55.0",
+    "styled-components": "^6.1.17",
+    "zod": "^3.24.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
