--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.2",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "6.6.0",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
