--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "styled-components": "^6.1.17",
+    "tailwind-merge": "^3.2.0",
     "zod": "^3.24.2"
   },
   "lint-staged": {
