--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@clerk/nextjs": "^6.14.2",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
