chore: update stylelint configuration to ignore coverage files

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-tailwindcss"],
   "plugins": ["stylelint-prettier"],
-  "ignoreFiles": [".next/**/*"],
+  "ignoreFiles": [".next/**/*", "coverage/**/*"],
   "rules": {
     "prettier/prettier": true,
     "at-rule-no-unknown": [
